# evidence_capture_tool

./: PROJECT_MANIFEST.txt  README.md  app.py  mini_notepadpp_plus.py  notepad++.py  notepadpp_full_pro_fixed.py  notepadpp_pro.py  notepadpp_pro1.py  pyproject.toml  requirements.txt
core/: annotate.py  capture.py  db.py  exporter.py  metadata.py  settings.py  word_writer.py
plugins/: issue_plugins_base.py  jira_plugin_stub.py
tests/: test_smoke.py
ui/: dialogs.py
